logs/mdnsbrowser.log
Listing '.'...
Listing './bin'...
Compiling './bin/mdnsbrowser.py'...
***   File "./bin/mdnsbrowser.py", line 62
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mdns_browser'...
Listing './lib/python3.5/site-packages/mdns_browser/agents'...
Compiling './lib/python3.5/site-packages/mdns_browser/agents/comms.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/agents/comms.py", line 80
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdns_browser/agents/debug.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/agents/debug.py", line 19
    print "DEBUG: %s" % str
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mdns_browser/agents/listener.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/agents/listener.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdns_browser/agents/logger.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/agents/logger.py", line 43
    print "%s: %s" % (tag, str)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdns_browser/agents/ui.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/agents/ui.py", line 119
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdns_browser/agents/uitk.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/agents/uitk.py", line 54
    print entry
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mdns_browser/mdns'...
Compiling './lib/python3.5/site-packages/mdns_browser/mdns/__init__.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/mdns/__init__.py", line 1487
    print "Multicast DNS Service Discovery for Python, version", __version__
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mdns_browser/system'...
Compiling './lib/python3.5/site-packages/mdns_browser/system/base.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/system/base.py", line 59
    print "************* mdispatch: dropped: orig(%s) obj_orig(%s) mtype(%s)" % (orig, this_source, mtype)
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdns_browser/system/config.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/system/config.py", line 32
    print c.sections()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdns_browser/system/mswitch.py'...
***   File "./lib/python3.5/site-packages/mdns_browser/system/mswitch.py", line 84
    print "mswitch: mtype(%s)" % mtype
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mdnsbrowser-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
